# sopa

./: .gitmodules  Cargo.toml  LICENSE  LICENSE-MIT  README.md  Trunk.toml  index.html  index.scss
.github/workflows/: pr_check.yml
frontend/: Cargo.toml  README.md  Trunk.toml  build.rs  index.html  index.scss
frontend/locales/: navbar.yml  tags.yml
frontend/sass/: animations.scss  fonts.scss  global.scss  location_definer.scss  location_finder.scss  main_page.scss  modifiers.scss  navbar.scss  notifications.scss  timepicker.scss
frontend/src/: app.rs  color_scheme.rs  cookies.rs  download.rs  footer.rs  initial_database.bson  language.rs  locations.rs  main.rs  navigation.rs  notifications.rs  window_location.rs
frontend/src/components/tags/: data.rs  view.rs
frontend/src/routes/: about.html  about.rs  main_page.rs  mod.rs
frontend/src/routes/location_definer/: day_hours_edit.rs  location_edit.rs  location_edit_manager.rs  mod.rs  opened_hours_edit.rs  tags_selection.rs
frontend/src/routes/location_finder/: mod.rs  tag_selection.rs
frontend/src/routes/location_finder/locations/: data.rs  view.rs
frontend/src/yew_components/: contacts.rs  day_hours.rs  locations.rs  mod.rs  navigation.rs  opened_hours.rs  tags.rs  time_range.rs  timepicker.rs
libsopa/: Cargo.toml
libsopa/src/: contact.rs  lib.rs  locations.rs  macros.rs  tags.rs  time.rs
libsopa/src/tags/: macros.rs  mod.rs  types.rs
libsopa/src/yew_components/: locations.rs  tags.rs
locales/: TODO.yml  contact.yml  days.yml  download.yml  footer.yml  gender.yml  hours.yml  location_definer.yml  locations.yml  main_page.yml  navbar.yml  search.yml  tags.yml
src/: app.rs  main.rs  navigation.rs  tag.rs
src/routes/: about.html  about.rs
src/routes/location_finder/: mod.rs
src/routes/location_finder/locations/: data.rs  view.rs
src/routes/location_finder/tags/: data.rs  view.rs
src/tags/: data.rs  view.rs
