[package]
name = "sopa"
version = "0.1.0"
edition = "2021"
description = "Open system for Social Health"
readme = "README.md"
license = "GPLv2"
keywords = ["yew", "trunk"]
categories = ["gui", "wasm", "web-programming"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
log = "0.4.22"
rust-i18n = "3.1.2"
wasm-logger = "0.2.0"
web-sys = "0.3.76"
yew = { version = "0.20", features = ["csr"] }

[package.metadata.i18n]
available-locales = ["en", "pl"]
default-locale = "en"
load-path = "locales"
