[package]
name = "sopa"
version = "0.1.0"
edition = "2021"
description = "Open system for Social Health"
readme = "README.md"
license = "GPLv2"
keywords = ["yew", "trunk"]
categories = ["gui", "wasm", "web-programming"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
log = "0.4.22"
rust-i18n = "3.1.2"
serde = { version = "1.0.217", features = ["std", "derive", "serde_derive"] }
bson = "2.13.0"
wasm-logger = "0.2.0"
js-sys = "0.3.76"
web-sys = { version = "0.3.76", features = [
    "Blob",
    "Url",
    "HtmlAnchorElement",
    "Document",
    "HtmlElement",
    "Window",
] }
yew = { version = "0.21.0", features = ["csr"] }
# NOTE: Random by default doesn't support browser JS
getrandom = { version = "*", features = ["js"] }
libsopa = { path = "../libsopa" }

[dependencies.uuid]
version = "1.12.1"
features = ["v4", "js"]


[package.metadata.i18n]
available-locales = ["en", "pl"]
default-locale = "en"
load-path = "../locales"
